# Overend

./: .gitignore  APPLE_AI_INTEGRATION.md  CHINESE_TERMINOLOGY_COMPLETE_REPORT.md  CLEANUP_PROGRESS_REPORT.md  DOI_BRACKET_FIX.md  OVEREND_AI_Agent_展示簡報.pptx  PDF_JOURNAL_ISSUES.md  PDF_TRAIN 2.mlmodelkey  PROJECT_REVIEW_REPORT.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.1.md  REORGANIZATION_SUMMARY.md  UI_OPTIMIZATION_SUMMARY.md  WRITER_REQUIREMENTS.md  _deprecated_files.txt  batch_test_pdfs.sh  cleanup_project.sh  install.sh  overend_training_data_v2.csv  overend_training_data_v3_no_jp.csv  synthetic_taiwan_papers.csv  test_author_line.swift  test_pdf_metadata.swift
.claude/: CODE_REVIEW_CHECKLIST.md  CODING_RULES.md  Swift_UI_Update_Validation_Prompt.md
.gemini/: CODING_RULES.md
DOCS/: ACADEMIC_TRANSLATION_IMPORT_FEATURE.md  AI_INTEGRATION_PLAN.md  CODE_CLEANUP_PLAN.md  DEVELOPMENT_DIARY.md  DOI_DEVELOPMENT_COMPLETE.md  DOI_FINAL_REPORT.md  DOI_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MEDIUM_PRIORITY_COMPLETE.md  OVEREND_Brand_Product_Design_Manual.md  PDF_EXPORT_FIX.md  PDF_IMPORT_TESTING_GUIDE.md  PDF_IMPORT_TEST_PLAN.md  PHYSICAL_CANVAS_ARCHITECTURE.md  PHYSICAL_CANVAS_QUICK_START.md  PHYSICAL_CANVAS_README.md  PROJECT_REFACTORING_REPORT.md  PROJECT_STATUS.md  SELECTION_FEATURE_SUMMARY.md  SESSION_COMPLETION_REPORT.md  UI_IMPROVEMENTS_COMPLETE.md  (+2 more)
OverendCore/: Cargo.toml  build.rs
OverendCore/bindings/: overend_coreFFI.h
OverendCore/src/: bibliography.rs  errors.rs  lib.rs  world.rs
(+579 files in other folders)
