[package]
name = "overend_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "overend_core"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
typst = "0.11"
typst-pdf = "0.11"
hayagriva = "0.6"
comemo = "0.4"
chrono = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
